--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-		<apache.log4j.version>1.2.17</apache.log4j.version>
 	</properties>
 
 	<dependencies>
@@ -86,7 +84,6 @@
 			<artifactId>guava</artifactId>
 			<version>23.0</version>
 		</dependency>
-
 		<!-- *************** -->
 		<!-- *** Junit 5 *** -->
 		<!-- *************** -->
@@ -126,6 +123,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.2.2.RELEASE</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -178,5 +176,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
