--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,13 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	<!-- ************* -->
 	<!-- *** Build *** -->
 	<!-- ************* -->
