--- a/pom.xml
+++ b/pom.xml
@@ -1,122 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>uy.com.demente.ideas.wallets</groupId>
-	<artifactId>wallets-core</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Wallets-Core</name>
-	<description>Wallets-Core</description>
+    <groupId>uy.com.demente.ideas.wallets</groupId>
+    <artifactId>wallets-core</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Wallets-Core</name>
+    <description>Wallets-Core</description>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+        <relativePath/>
+    </parent>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
-	<dependencies>
-		<!-- *********** -->
-		<!-- *** WEB *** -->
-		<!-- *********** -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<!-- ********************* -->
-		<!-- *** Base de datos *** -->
-		<!-- ********************* -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.postgresql</groupId> -->
-		<!-- <artifactId>postgresql</artifactId> -->
-		<!-- </dependency> -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.4.193</version>
-			<scope>runtime</scope>
-		</dependency>
-		<!-- *************** -->
-		<!-- *** Swagger *** -->
-		<!-- *************** -->
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-		<!-- ***************** -->
-		<!-- *** Seguridad *** -->
-		<!-- ***************** -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.boot</groupId> -->
-		<!-- <artifactId>spring-boot-starter-security</artifactId> -->
-		<!-- </dependency> -->
-		<!-- ************* -->
-		<!-- *** Utils *** -->
-		<!-- ************* -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.9</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>23.0</version>
-		</dependency>
-		<!-- *************** -->
-		<!-- *** Junit 5 *** -->
-		<!-- *************** -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+    <dependencies>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <!-- *********** -->
+        <!-- *** WEB *** -->
+        <!-- *********** -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- ******************** -->
+        <!-- ***** DATABASE ***** -->
+        <!-- ******************** -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- <dependency> -->
+        <!-- <groupId>org.postgresql</groupId> -->
+        <!-- <artifactId>postgresql</artifactId> -->
+        <!-- </dependency> -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.193</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- *************** -->
+        <!-- *** SWAGGER *** -->
+        <!-- *************** -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+        <!-- **************** -->
+        <!-- *** SECURITY *** -->
+        <!-- **************** -->
+        <!-- <dependency>-->
+        <!--    <groupId>org.springframework.boot</groupId>-->
+        <!--    <artifactId>spring-boot-starter-security</artifactId>-->
+        <!-- </dependency>-->
+
+        <!-- ************* -->
+        <!-- *** UTILS *** -->
+        <!-- ************* -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+
+        <!-- *************** -->
+        <!-- *** TESTING *** -->
+        <!-- *************** -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
@@ -124,66 +119,70 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-	<!-- ************* -->
-	<!-- *** Build *** -->
-	<!-- ************* -->
-	<build>
-		<finalName>wallets-core</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.2.2.RELEASE</version>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.31.0</version>
-				<configuration>
-					<images>
-						<image>
-							<name>1987diegog/${project.build.finalName}</name>
-							<build>
-								<from>openjdk:latest</from>
-								<entryPoint>java -Dspring.profiles.active=prod -jar /Users/DieSil/imagesDocker/${project.build.finalName}.jar</entryPoint>
-								<assembly>
-									<basedir>
-										/Users/DieSil/imagesDocker/
-									</basedir>
-									<descriptorRef>
-										artifact
-									</descriptorRef>
-									<inline>
-										<id> assembly </id>
-										<files>
-											<file>
-												<source>
-													target/${project.build.finalName}.jar
-												</source>
-											</file>
-										</files>
-									</inline>
-								</assembly>
-								<tags>
-									<tag>
-										latest
-									</tag>
-								</tags>
-								<ports>
-									<port>8080</port>
-								</ports>
-							</build>
-							<run>
-								<namingStrategy>alias</namingStrategy>
-							</run>
-							<alias>${project.build.finalName}</alias>
-						</image>
-					</images>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
+    <!-- ********************** -->
+    <!-- *** BUILD & DOCKER *** -->
+    <!-- ********************** -->
+
+    <build>
+        <finalName>wallets-core</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.31.0</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>1987diegog/${project.build.finalName}</name>
+                            <build>
+                                <from>openjdk:latest</from>
+                                <entryPoint>java -Dspring.profiles.active=prod -jar
+                                    /Users/DieSil/imagesDocker/${project.build.finalName}.jar
+                                </entryPoint>
+                                <assembly>
+                                    <basedir>
+                                        /Users/DieSil/imagesDocker/
+                                    </basedir>
+                                    <descriptorRef>
+                                        artifact
+                                    </descriptorRef>
+                                    <inline>
+                                        <id>assembly</id>
+                                        <files>
+                                            <file>
+                                                <source>
+                                                    target/${project.build.finalName}.jar
+                                                </source>
+                                            </file>
+                                        </files>
+                                    </inline>
+                                </assembly>
+                                <tags>
+                                    <tag>
+                                        latest
+                                    </tag>
+                                </tags>
+                                <ports>
+                                    <port>8080</port>
+                                </ports>
+                            </build>
+                            <run>
+                                <namingStrategy>alias</namingStrategy>
+                            </run>
+                            <alias>${project.build.finalName}</alias>
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
